--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -55,4 +55,8 @@
     <color name="cyan_50">#E0F7FA</color>
     <color name="amber_50">#FFF8E1</color>
     <color name="purple_50">#F3E5F5</color>
+
+    <color name="colorDayNightWhite">#FFFFFF</color>
+    <color name="colorDayNighCardBg">#FFFFFF</color>
+    <color name="colorDayNightPurple">#B388FF</color>
 </resources>
